--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,17 +1,11 @@
-FROM ubuntu:15.10
+FROM python:3.5-alpine
 
-RUN apt-get update && apt-get install -y \
-    curl \
-    openssh-server \
-    python3 \
-    python3-pip \
-    wget && \
-    rm -rf /var/lib/apt/lists/*
 
-# make some useful symlinks that are expected to exist
-RUN cd /usr/bin && ln -s python3 python
+RUN apk add --update bash curl openssh && \
+  rm -rf /var/cache/apk/*
 
-RUN pip3 install awscli
+# Install AWS command line tool
+RUN pip install --upgrade pip && pip install awscli
 
 RUN mkdir /project
 WORKDIR /project
