--- a/deployments/helloworld/helloworld-v2.yaml
+++ b/deployments/helloworld/helloworld-v2.yaml
@@ -1,17 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello-node
-  labels:
-    app: hello-node
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 8080
-  selector:
-    run: hello-node
-    track: stable
----
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -20,7 +6,7 @@ metadata:
     track: stable
   name: hello-node
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       run: hello-node
@@ -29,6 +15,7 @@ spec:
       maxSurge: 1
       maxUnavailable: 1
     type: RollingUpdate
+  minReadySeconds: 5
   template:
     metadata:
       labels:
@@ -36,8 +23,8 @@ spec:
         track: stable
     spec:
       containers:
-      - name: hello-node-v1
-        image: jdeskins/hello-node:1.0
+      - name: hello-node
+        image: jdeskins/hello-node:2.0
         ports:
         - containerPort: 8080
         resources:
