Added livenessProbe and readinessProbe

--- a/deployments/helloworld/helloworld-v2.yaml
+++ b/deployments/helloworld/helloworld-v2.yaml
@@ -27,6 +27,20 @@ spec:
         image: jdeskins/hello-node:2.0
         ports:
         - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 10
+          timeoutSeconds: 1
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 5
+          timeoutSeconds: 1
         resources:
           limits:
             cpu: "500m"
