--- a/deployments/helloworld/helloworld-v1.yaml
+++ b/deployments/helloworld/helloworld-v1.yaml
@@ -40,6 +40,20 @@ spec:
         image: jdeskins/hello-node:1.0
         ports:
         - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 10
+          timeoutSeconds: 1
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 5
+          timeoutSeconds: 1
         resources:
           limits:
             cpu: "500m"
