--- a/deployments/node-redis/web-deployment-v1.yaml
+++ b/deployments/node-redis/web-deployment-v1.yaml
@@ -5,7 +5,10 @@ metadata:
   labels:
     app: node-demo
 spec:
-  type: LoadBalancer
+  # if your cluster supports it, use type: LoadBalancer to automatically create
+  # an external load-balanced IP for the frontend service.
+  # type: LoadBalancer
+  type: NodePort
   ports:
   - port: 8080
   selector:
