--- a/deployments/node-redis/web-deployment-v1.yaml
+++ b/deployments/node-redis/web-deployment-v1.yaml
@@ -41,18 +41,19 @@ spec:
       containers:
       - name: node-demo
         image: jdeskins/node-demo:1.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         livenessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 10
           timeoutSeconds: 1
         readinessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 5
