--- a/deployments/helloworld/helloworld-v1.yaml
+++ b/deployments/helloworld/helloworld-v1.yaml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-node
+  name: hello-app
   labels:
-    app: hello-node
+    app: hello-app
 spec:
   type: LoadBalancer
   ports:
   - port: 8080
   selector:
-    run: hello-node
+    run: hello-app
     track: stable
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: hello-node
+    app: hello-app
     track: stable
-  name: hello-node
+  name: hello-app
 spec:
   replicas: 3
   selector:
     matchLabels:
-      run: hello-node
+      run: hello-app
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -32,12 +32,19 @@ spec:
   template:
     metadata:
       labels:
-        run: hello-node
+        run: hello-app
         track: stable
     spec:
       containers:
-      - name: hello-node
+      - name: hello-app
         image: jdeskins/hello-node:1.0
+        resources:
+          limits:
+            cpu: 500m
+            memory: 128Mi
+          requests:
+            cpu: 250m
+            memory: 64Mi
         ports:
         - containerPort: 8080
         livenessProbe:
