--- a/deployments/node-redis/deploy/redis-master.yaml
+++ b/deployments/node-redis/deploy/redis-master.yaml
@@ -46,7 +46,7 @@ spec:
     spec:
       containers:
       - name: master
-        image: redis:2.8.23
+        image: redis:3.2-alpine
         args:
           - "--appendonly yes"
         resources:
