--- a/deployments/helloworld/helloworld-v1.yaml
+++ b/deployments/helloworld/helloworld-v1.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: hello-app
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 8080
   selector:
@@ -20,7 +20,7 @@ metadata:
     track: stable
   name: hello-app
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       run: hello-app
@@ -40,10 +40,10 @@ spec:
         image: jdeskins/hello-node:1.0
         resources:
           limits:
-            cpu: 500m
+            cpu: 250m
             memory: 128Mi
           requests:
-            cpu: 250m
+            cpu: 100m
             memory: 64Mi
         ports:
         - containerPort: 8080
